# CLU_data_cleaning

./: .env.example  .gitignore  README.md  clu_analyzer.py  main.py  pyproject.toml  requirements.txt  specification.md
data/: IT_01_1.json  json_schema
docs/: CLUProcessor_explanation.md  cli_usage.md  fds.md  urs.md
eval/: pca_evaluator.py
example/: clu_audit_report_2025-08-19_19-31-08.md  enrichment_report_2025-08-19_13-53-27.md
src/: config.py  dataset.py  model_client.py  processor.py  reporting.py  schemas.py  visualization.py
src/core/: __init__.py  cluster_auditor.py  dimensionality_reducer.py  outlier_detector.py  statistical_analyzer.py
src/utils/: logging.py
