[project]
name = "clu-data-cleaning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hdbscan>=0.8.40",
    "llvmlite>=0.41",
    "matplotlib>=3.10.5",
    "numba>=0.58",
    "numpy<2.0",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "seaborn>=0.13.2",
    "umap-learn>=0.5.6",
]
